--- a/carroservice/pom.xml
+++ b/carroservice/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pablo</groupId>
-	<artifactId>carroservice</artifactId>
+	<artifactId>carro-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>carroservice</name>
 	<description>microservice for carros</description>
