--- a/motoservice/pom.xml
+++ b/motoservice/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pablo</groupId>
-	<artifactId>motoservice</artifactId>
+	<artifactId>moto-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>motoservice</name>
 	<description>microservice for moto</description>
