--- a/usuarioservice/pom.xml
+++ b/usuarioservice/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pablo</groupId>
-	<artifactId>usuarioservice</artifactId>
+	<artifactId>usuario-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>usuarioservice</name>
 	<description>microservice for usuario</description>
