--- a/config-data/eureka-service.yaml
+++ b/config-data/eureka-service.yaml
@@ -4,5 +4,5 @@ eureka:
   client:
     fetch-registry: false
     register-with-eureka: false
-    # serviceUrl:
-    #   defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
