--- a/config-data/gateway-service.yaml
+++ b/config-data/gateway-service.yaml
@@ -18,14 +18,14 @@ spring:
         - id: usuario-service
           uri: lb://usuario-service
           predicates:
-            - Path=/usuario/**
+            - Path=/usuarios/**
         - id: carro-service
           uri: lb://carro-service
           predicates:
-            - Path=/carro/**
+            - Path=/carros/**
           - id: moto-service
           uri: lb://moto-service
           predicates:
-            - Path=/moto/**
+            - Path=/motos/**
 
 
